@@ -1,3 +1,10 @@
+2009-06-16 [iwkse]	0.9.6cvs16
+
+	* src/fancy_viewer.c
+	* src/fancy_viewer.h
+            Add shortcuts for zoom in (ctrl-+), 
+            zoom out (ctrl--), zoom normal (ctrl-.)
+
 2009-06-16 [iwkse]	0.9.6cvs15
 
 	* src/fancy_viewer.c
